--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Layout-4 </title>
-        <link rel="stylesheet" href="C2.css">
+        <meta charset="UTF-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Responsive layout with flexbox</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" href="style1.css">
     </head>
-    <body> 
-        <div class="header">
-            <h1> Header</h1>
-        </div>
-        <div class="nav-bar">
-            <h1>Navigation</h1>
-        </div>
+    <body>
+        <div class="wrapper"></div>
+        <header class="header">
+            <h1>Header</h1>
+        </header>
+        <article class="main">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum hic qui fugiat ullam et cumque molestiae quas illo laudantium minima? Illo quas veritatis obcaecati saepe officiis ut molestias earum corrupti?
 
-        <div class="content-area">
-            <div class="content-1 content"> 
-            <h1>content-1</h1>
-            </div>
-
-            <div class="content-2 content"> 
-             <h1>content-2</h1>
-            </div>
-            
-            <div class="content-3 content"> 
-             <h1>content-3</h1>
-             </div>  
-        </div>
-        <div class="footer">
-            <h1> Footer</h1>
-        </div>
+        </p>
+        </article>
+        <aside class="aside aside1">
+            <h1>Aside1</h1>
+        </aside>
+        <aside class="aside aside2">
+            <h1>Aside2</h1>
+        </aside>
+        <footer class="footer">
+            <h1>Footer</h1>
+        </footer>
     </body>
 </html>
